--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1> Hello Coders! </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Customize your page title -->
+    <title>Project #1</title>
+    <!-- This is how you include the CSS file in your page -->
+    <link rel="stylesheet" href="styles.css"/>
+</head>
+<body>
+    <!-- Customize your greeting -->
+    <h1>Hello Coders!</h1>
+    <!-- Customize the text on your Link -->
+    <a href="./aboutDorian.html">Link</a>
+    <script>
+        //alert("Hello Coders!");
+    </script>
+</body>
+</html>
