--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Me</title>
+    <!-- What about the CSS? -->
+</head>
+<body>
+    <!-- Set a page heading -->
+    <h1>A Little ABout Me!</h1>
+    <!-- Replace the InnerHTML text below with what is being asked for -->
+    <p>Hello, my name is Dorian Moore and I am currently a High School teacher.</p>
+    <p> Game development is at the forfront of my career aspirations. Outside of gaming there are things like web and app development that interest me.</p>
+    <p>Currently my favorite food is lamb chops, but on any regular day my go to is a burger.</p>
+    <!-- Correct the link to the Homepage and Customize the Link Text -->
+    <a href="">Link</a>
+</body>
+</html>
