--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Customize your greeting -->
     <h1>Hello Coders!</h1>
     <!-- Customize the text on your Link -->
-    <a href="./aboutDorian.html">Link</a>
+    <a href="./aboutme.html">Link</a>
     <script>
         //alert("Hello Coders!");
     </script>
