--- a/aboutme.html
+++ b/aboutme.html
@@ -10,10 +10,10 @@
     <!-- Set a page heading -->
     <h1>A Little ABout Me!</h1>
     <!-- Replace the InnerHTML text below with what is being asked for -->
-    <p>Hello, my name is Dorian Moore and I am currently a High School teacher.</p>
+    <p>Hello, my name is Dorian Moore. I am a Memphis native and I am in the midst of my fifth year of teaching.</p>
     <p> Game development is at the forefront of my career aspirations. Outside of gaming there are things like web and app development that interest me.</p>
     <p>Currently my favorite food is lamb chops, but on any regular day my go to is a burger.</p>
     <!-- Correct the link to the Homepage and Customize the Link Text -->
-    <a href="./index.html">Link</a>
+    <a href="./index.html"><h2>Main Page</h2></a>
 </body>
 </html>
