--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Hello Coders!</h1>
     <h2>Welcome to my very first website!</h2>
     <!-- Customize the text on your Link -->
-    <a href="./aboutme.html"><h2> ABout me page!</h2></h2></a>
+    <a href="./aboutme.html"><h2> ABout me page!</h2></a>
     <script>
         //alert("Hello Coders!");
     </script>
