--- a/aboutme.html
+++ b/aboutme.html
@@ -14,6 +14,6 @@
     <p> Game development is at the forefront of my career aspirations. Outside of gaming there are things like web and app development that interest me.</p>
     <p>Currently my favorite food is lamb chops, but on any regular day my go to is a burger.</p>
     <!-- Correct the link to the Homepage and Customize the Link Text -->
-    <a href="./"><h2>Main Page</h2></a>
+    <a href="./"><h2>Click here to return to main.</h2></a>
 </body>
 </html>
